@@ -1,3 +1,12 @@
+2004-06-30  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-css.h: Fix bug #145173
+	* rsvg-filter.c: Ditto
+	* rsvg-mask.c: Ditto
+	* rsvg-private.h: Ditto
+	* rsvg-styles.h: Ditto
+	* test-display.c: Ditto
+
 2004-06-29  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-filter.c: "Fix" bug #145149
